package org.astu.feature.bulletinBoard.views.components.attachments.common.models

enum class AttachmentType {
    SURVEY,
}