package org.astu.feature.bulletinBoard.views.components.attachments.surveys.answers.models

abstract class AnswerContentBase(val text: String)
