package org.astu.feature.bulletinBoard.views.entities

import androidx.compose.ui.Modifier

interface DefaultModifierProvider {
    fun getDefaultModifier(): Modifier
}